# compute-engine

./: .gitignore  API.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BUGS_TO_FIX.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT.md  COMPARISON_ANALYSIS.md  COMPUTE_TIME_BILLING.md  COVERAGE_IMPROVEMENT_PLAN.md  Cargo.toml  DEEP_VALIDATION_REPORT.md  ELECTRICAL_MODULE_SUMMARY.md  ELECTRICAL_TESTS_SUMMARY.md  FEATURE_AUDIT_2025.md  FUNCTION_INVENTORY.md  MASTER_VALIDATION_SUMMARY.md  MATHEMATICA_COMPETITION_PROGRESS.md  MCP_MIGRATION_COMPLETE.md  OPERATIONS_COMPLETE_LIST.md  PHASE_1A_COMPLETE.md  README.md  RELEASE_NOTES_v0.1.0.md  STDOUT_STDERR_POLICY.md  TESTING.md  VALIDATION_BIOLOGY.md  VALIDATION_CHEMISTRY.md  VALIDATION_CONTROL_THEORY.md  VALIDATION_CRYPTOGRAPHIC_MATHEMATICS.md  VALIDATION_ENGINEERING.md  VALIDATION_GEOPHYSICS.md  VALIDATION_GRAPH_THEORY.md  VALIDATION_INFORMATION_THEORY.md  VALIDATION_MACHINE_LEARNING.md  VALIDATION_OPTICS.md  VALIDATION_OPTIMIZATION.md  VALIDATION_PHYSICS_BLACK_HOLES.md  VALIDATION_PHYSICS_COSMOLOGY.md  VALIDATION_PHYSICS_GRAVITATIONAL_WAVES.md  (+29 more)
examples/: electrical_analysis_demo.rs  linear_programming_demo.rs  machine_learning_demo.rs  materials_science_demo.rs  test_phase4_all.rs  test_quantum_mechanics.rs  test_symbolic.rs  test_symbolic_matrices.rs  test_symbolic_tensors.rs  test_tensor_calculus.rs  test_timing.rs
scripts/: test-all-tools.sh  test-request.json  test-working.sh  test_mcp_client.js  test_mcp_complete.sh  test_mcp_comprehensive.js  test_mcp_dev.js  test_mcp_release.js  test_mcp_simple.js  test_tensor.json
src/: api_legacy.rs  help.rs  help_auto.rs  lib.rs  main.rs  mcp_server.rs  wasm.rs
tests/: all_integration_tests.rs  all_ten_tools_comprehensive_test.rs  all_unit_tests.rs  analyze_comprehensive_tests.rs  calculus_comprehensive_tests.rs  complete_coverage_test.rs  complete_operation_coverage.rs  comprehensive_tool_tests.rs  compute_scientific_comprehensive_tests.rs  cryptography_tests.rs  datetime_tests.rs  differentiate_comprehensive_tests.rs  engine_types_tests.rs  fieldtheory_comprehensive_tests.rs  function_approximator_test.rs  graph_theory_tests.rs  information_theory_tests.rs  integrate_comprehensive_tests.rs  integration_tests.rs  linear_algebra_comprehensive_tests.rs  linear_algebra_tests.rs  optimization_tests.rs  optimize_comprehensive_tests.rs  physics_control_systems_comprehensive_tests.rs  physics_electromagnetism_comprehensive_tests.rs  physics_nuclear_comprehensive_tests.rs  physics_quantum_mechanics_comprehensive_tests.rs  physics_relativity_comprehensive_tests.rs  physics_statistical_comprehensive_tests.rs  sample_comprehensive_tests.rs  signal_processing_tests.rs  (+11 more)
(+755 files in other folders)
